# storage-agent-workbench

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
design/logos/: index.html
docs/: acceptance.md  api.md  architecture.md  data-model.md  development-history.md  install.md  packaging.md  product.md  release-smoke-test.md  release-template.md  release.md  roadmap.md  security.md  signing.md  tools.md
examples/: inventory-sample.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  ErrorBoundary.tsx  api.ts  config.ts  i18n.tsx  index.css  main.tsx  sessionRuns.test.ts  sessionRuns.ts  theme.tsx  types.ts
frontend/src/components/: AccountProfilePanel.tsx  CloudProviderTester.tsx  CommandPalette.tsx  Composer.tsx  (+16 more)
scripts/: build-desktop-linux.sh  build-desktop-macos.sh  build-desktop-windows.ps1  build-macos-app-bundle.sh  build-sidecar-for-tauri.py  macos-entitlements.plist  sign-macos-app-bundle.sh  stamp-version.py  verify-desktop-artifacts.py  verify-desktop-build.sh  verify-macos-app-bundle.sh  verify-runtime-common.py  verify-runtime-linux.sh  verify-runtime-macos.sh  verify-runtime-windows.ps1
sidecar/: README.md  pyproject.toml
sidecar/app/: __init__.py  audit.py  config.py  data_maintenance.py  db.py  events.py  main.py  migrations.py  packaged_main.py  run_service.py  tool_runner.py
sidecar/app/agent_runtime/: __init__.py  agent_service.py  analysis_agent.py  autonomy.py  context_builder.py  guardrails.py  model_budget.py  prompts.py  result_parser.py  session_action_tools.py  session_agent.py  session_analysis_tools.py  session_memory_tools.py  session_tools.py  tool_registry.py  turn_guard.py
sidecar/app/analysis/: __init__.py  access_logs.py  aggregate.py  drilldown.py  duck.py  inventory.py
sidecar/app/bundled_skillpacks/storageops/: skill-registry.yaml
sidecar/app/bundled_skillpacks/storageops/skills/storageops-access-log-analysis/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-account-posture/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-bigdata-pipeline/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-cli-sdk-diagnosis/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-data-consistency/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-eval-golden-cases/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-event-notification/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-evidence-reporting/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-inventory-analysis/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-lifecycle-cost/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-migration-sync/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-mount-filesystem-workspace/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-network-endpoint-access/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-observability-audit/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-performance-diagnosis/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-replication-versioning/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-s3-protocol-compatibility/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-security-iam-policy/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-triage/: SKILL.md
sidecar/app/bundled_skillpacks/storageops/skills/storageops-workbench-investigation/: SKILL.md
sidecar/app/error_triage/: __init__.py  engine.py  parser.py  playbooks.py  triage_agent.py
sidecar/app/evidence/: __init__.py  managed_import.py
sidecar/app/models/: schemas.py
sidecar/app/repositories/: __init__.py  account_discovery.py  cloud_providers.py  datasets.py  error_triage.py  evidence_imports.py  model_providers.py  runs.py  session_datasets.py  sessions.py  settings.py
sidecar/app/routers/: cloud_providers.py  datasets.py  error_triage.py  evidence_imports.py  health.py  model_providers.py  reports.py  runs.py  sessions.py  settings.py  tools.py
sidecar/app/runs/: __init__.py  _common.py  access_log_run.py  account_discovery_run.py  analysis_report.py  config_review_run.py  diagnostic.py  inventory_run.py  planner.py  report.py
sidecar/app/s3/: __init__.py  account_tools.py  client_factory.py  config_tools.py  scope.py  tools.py
sidecar/app/security/: __init__.py  keyring_store.py  redaction.py
sidecar/app/sessions/: __init__.py  next_actions.py  session_report.py  summary_builder.py
sidecar/app/skills/: __init__.py  context.py  contract.py  loader.py  selection.py
sidecar/packaging/: README.md  build_sidecar.py  smoke_test_sidecar.py  storage-agent-sidecar.spec
sidecar/tests/: conftest.py  test_account_discovery.py  test_agent.py  test_agent_analysis.py  test_agent_memory.py  test_analysis.py  test_app_data_dir.py  test_autonomy.py  test_cloud_providers.py  test_config_detail.py  test_config_review.py  test_continue_investigation.py  test_drilldown.py  test_error_triage.py  test_evidence_import.py  test_guardrails_escalation.py  test_health.py  test_keyring_store.py  test_maxturns_finalize.py  test_migrations.py  test_model_providers.py  test_packaging.py  test_provider_compat.py  test_redaction.py  test_review_fixes.py  test_runs.py  test_s3_safety.py  test_s3_tools.py  test_session_actions.py  test_session_analysis.py  test_session_streaming.py  test_session_tool_locking.py  test_sessions.py  test_skills.py  test_streamed_loop_regression.py  test_tool_replay.py  test_turn_guard.py  test_v0242_bugfixes.py  test_v0243_bugfixes.py  test_v0270_bugfixes.py  (+12 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+11 files in other folders)
