[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-agent-sidecar"
version = "0.7.0"
description = "Local FastAPI sidecar for Storage Agent Workbench (Phase 07: agent planner mode)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "keyring>=24",
    "boto3>=1.34",
    "botocore>=1.34",
    "duckdb>=0.10",
    "pyarrow>=14",
    "pandas>=2.0",
    "python-multipart>=0.0.9",
    "openai>=1.40",
    "openai-agents>=0.0.1",
]

# NOTE (Phase 07): Adds the OpenAI Agents SDK (openai-agents) + openai for an
# OPTIONAL agent planner mode. These are imported LAZILY inside agent_runtime so
# the sidecar (and deterministic mode) runs even if they are absent or no model
# API key is configured. Agent mode only calls existing whitelisted, read-only
# tools through the shared tool_runner.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
# Packaging tooling (Phase 08). Kept separate so the core install and CI test
# job stay lean; `pip install -e ".[packaging]"` to build the bundled sidecar.
packaging = [
    "pyinstaller>=6.3",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
