[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-agent-sidecar"
version = "0.7.0"
description = "Local FastAPI sidecar for Storage Agent Workbench"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "keyring>=24",
    "cryptography>=42",
    "boto3>=1.34",
    "botocore>=1.34",
    "duckdb>=0.10",
    "pyarrow>=14",
    "pandas>=2.0",
    "python-multipart>=0.0.9",
    # The two AI SDKs move fast and can break across releases, so pin them with
    # upper bounds to the tested majors/minors (openai-agents is pre-1.0, so a
    # minor bump can be breaking → cap at the next minor). CI installs from this
    # file with no lockfile, so these bounds ARE the reproducibility guard.
    "openai>=2.40,<3",
    "openai-agents>=0.17,<0.18",
    "pyyaml>=6.0",
]

# NOTE: Adds the OpenAI Agents SDK (openai-agents) + openai for the conversational
# session agent. These are imported LAZILY inside agent_runtime so the sidecar
# (and the deterministic run executors) runs even if they are absent or no model
# API key is configured. The agent only calls existing whitelisted, read-only
# tools; it never sees credentials.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
# Packaging tooling (Phase 08). Kept separate so the core install and CI test
# job stay lean; `pip install -e ".[packaging]"` to build the bundled sidecar.
packaging = [
    "pyinstaller>=6.3",
]

[tool.setuptools]
packages = ["app"]

# Bundled StorageOps skill pack (Phase 19): registry + SKILL.md guidance docs
# only. No scripts/references/templates/CLI are vendored. These are read-only
# professional-method context for the Agent — never executed.
[tool.setuptools.package-data]
app = ["bundled_skillpacks/storageops/skill-registry.yaml", "bundled_skillpacks/storageops/skills/*/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
