[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-agent-sidecar"
version = "0.23.0"
description = "Local FastAPI sidecar for Storage Agent Workbench"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "keyring>=24",
    "cryptography>=42",
    "boto3>=1.34",
    "botocore>=1.34",
    "duckdb>=0.10",
    "pyarrow>=14",
    "pandas>=2.0",
    "python-multipart>=0.0.9",
    # Floors keep us off ancient versions; upper bounds are deliberately loose so
    # new agent-SDK features flow in automatically. `openai` needs no explicit cap
    # here — `openai-agents` already constrains it (currently `openai<3,>=2.36`).
    # `openai-agents` is pre-1.0 and ships features in 0.x minors, so we allow all
    # of them and only guard the 1.0 boundary (a pre-1.0 SDK's 1.0 is typically a
    # rewrite → worth a human-reviewed bump). CI installs from this file with no
    # lockfile, so `<1` is the only reproducibility guard we keep.
    "openai>=2.40",
    "openai-agents>=0.17,<1",
    "pyyaml>=6.0",
]

# NOTE: Adds the OpenAI Agents SDK (openai-agents) + openai for the conversational
# session agent. These are imported LAZILY inside agent_runtime so the sidecar
# (and the deterministic run executors) runs even if they are absent or no model
# API key is configured. The agent only calls existing whitelisted, read-only
# tools; it never sees credentials.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]
# Packaging tooling (Phase 08). Kept separate so the core install and CI test
# job stay lean; `pip install -e ".[packaging]"` to build the bundled sidecar.
packaging = [
    "pyinstaller>=6.3",
]

[tool.setuptools]
packages = ["app"]

# Bundled StorageOps skill pack (Phase 19): registry + SKILL.md guidance docs
# only. No scripts/references/templates/CLI are vendored. These are read-only
# professional-method context for the Agent — never executed.
[tool.setuptools.package-data]
app = ["bundled_skillpacks/storageops/skill-registry.yaml", "bundled_skillpacks/storageops/skills/*/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Lint gate (CI runs `ruff check app`). Intentionally a small, high-signal rule
# set — this is a green gate, not a cleanup crusade. line-length 100 matches the
# tree. E501 (line length) is not enforced because long descriptive
# strings/docstrings are pervasive and deliberate. Import sorting (`I`) is not
# enforced because the existing import blocks don't follow ruff's isort ordering
# and reformatting them is out of scope for a docs/CI pass. A handful of
# pre-existing findings are pinned to per-file-ignores so the gate stays green
# for new code without a tree-wide cleanup (each is a real but intentional/inert
# case: F821 names are only referenced inside `from __future__ import
# annotations` string annotations, F401/F541/E702 are cosmetic).
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/agent_runtime/guardrails.py" = ["F821"]
"app/agent_runtime/session_agent.py" = ["F401"]
"app/analysis/inventory.py" = ["F541"]
"app/evidence/managed_import.py" = ["F401"]
"app/repositories/sessions.py" = ["E702"]
"app/routers/datasets.py" = ["F401"]
"app/security/keyring_store.py" = ["F821"]
"app/skills/loader.py" = ["F401"]
