[package]
name = "storage-agent-workbench"
version = "0.19.6"
description = "Codex-like desktop workbench for object storage diagnostics and analysis"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "storage_agent_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE (Phase 08): The Python FastAPI sidecar is packaged with PyInstaller and
# launched through Tauri's sidecar support (tauri-plugin-shell). See
# docs/packaging.md. This Rust code is unverified in CI when the Rust toolchain
# is absent (a documented packaging blocker).
