[package]
name = "storage-agent-workbench"
version = "0.19.8"
description = "Local-first agent workbench for object storage operations: diagnostics, analysis, config review, and optimization"
edition = "2021"
rust-version = "1.77.2"
license = "BUSL-1.1"

[lib]
name = "storage_agent_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: The Python FastAPI sidecar is packaged with PyInstaller as a ONE-DIR
# bundle, shipped as a Tauri resource, and launched directly from src/lib.rs via
# std::process. See docs/packaging.md. This Rust code is unverified in CI when
# the Rust toolchain is absent (a documented packaging blocker).
