[package]
name = "storage-agent-workbench"
version = "0.22.0"
description = "Local-first agent for object storage operations, analytics, and management on S3-compatible systems"
edition = "2021"
rust-version = "1.77.2"
license = "Apache-2.0"

[lib]
name = "storage_agent_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: The Python FastAPI sidecar is packaged with PyInstaller as a ONE-DIR
# bundle, shipped as a Tauri resource, and launched directly from src/lib.rs via
# std::process. See docs/packaging.md. This Rust code is unverified in CI when
# the Rust toolchain is absent (a documented packaging blocker).
